# baseDNN

./: CMakeLists.txt  MIGRATION_SUMMARY.txt  Plugins.md  README.md  WEBGPU_MIGRATION_STATUS.md  test_gpu_dispatch  test_gpu_dispatch.c  test_simple_compute.c
backend/tests/: diagnose_webgpu.c  gpu_stress_test.c  perf_test_webgpu.c  test_webgpu.c
backend/webgpu/: webgpu_backend.c  webgpu_backend.h  webgpu_ops.c
backend/webgpu/shaders/: add.wgsl  matmul.wgsl  mul.wgsl  relu.wgsl  shader_sources.h  sigmoid.wgsl  softmax.wgsl  sub.wgsl  tanh.wgsl
core/include/: basednn.h  layer.h  network.h  ops.h  optimizer.h  registry.h  tensor.h
core/src/: layer.c  network.c  ops.c  optimizer.c  registry.c  tensor.c
core/tests/full/: mnist.c  xor.c
core/tests/unit/: test_layer.c  test_network.c  test_ops.c  test_optimizer.c  test_registry.c  test_tensor.c
include/basednn/: network.h  tensor.h
include/petard/: optim.h  tensor.h
include/trebuchet/: autograd.h  layer.h  ops.h  tensor.h
src/: autograd.c  layer.c  network.c  ops.c  optimizer.c  tensor.c
stdlib/include/: activations.h  attention.h  conv.h  regularization.h  shape.h
tests/full/: mnist.c
tests/unit/: test_network.c  test_optimizer.c
